[package]
name = "Parser"
version = "0.7.0"
edition = "2021"

[dependencies]
thirtyfour = "0.35"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["native-tls"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
